another try at temp talent flicker fix

--- a/src/ui/pages/TalentsPage/components/MainList/MainList.module.css
+++ b/src/ui/pages/TalentsPage/components/MainList/MainList.module.css
@@ -99,11 +99,6 @@
     cursor: unset;
 }
 
-.icon {
-    width: 80px;
-    height: auto;
-}
-
 .header {
     margin-bottom: 4px;
 
